# Game-Ecosystem-SDK

artifacts/@openzeppelin/contracts/interfaces/draft-IERC6093.sol/: IERC1155Errors.dbg.json
artifacts/@openzeppelin/contracts/utils/math/SafeCast.sol/: SafeCast.dbg.json
artifacts/contracts/CRIDAToken.sol/: CRIDAToken.dbg.json  CRIDAToken.json
artifacts/contracts/GameToken.sol/: GameToken.dbg.json  GameToken.json
artifacts/contracts/GameTokenFactory.sol/: GameTokenFactory.dbg.json  GameTokenFactory.json  IXPToken.json
artifacts/contracts/Token.sol/: MyToken.dbg.json  MyToken.json
artifacts/contracts/XPToken.sol/: XPToken.json
artifacts/contracts/mocks/MockERC20.sol/: MockERC20.dbg.json  MockERC20.json
cache/: solidity-files-cache.json
contracts/artifacts/: CRIDAToken.json  CRIDAToken_metadata.json  GameEcosystem.json  GameEcosystem_metadata.json  GameToken.json  GameTokenFactory.json  GameTokenFactory_metadata.json  GameToken_metadata.json  IXPToken_metadata.json  MyToken.json  MyToken_metadata.json  XPToken.json  XPToken_metadata.json
game_rust_sdk/: API_DOCUMENTATION.md  CALLDATA_USAGE.md  Cargo.toml  README.md  SUMMARY.md  start_servers.sh
game_rust_sdk/examples/: calldata_example.rs
game_rust_sdk/src/: api.rs  calldata.rs  contracts.rs  error.rs  lib.rs  main.rs  utils.rs
game_rust_sdk/tests/: integration_test.rs
game_rust_sdk/web_ui/: README.md  index.html  package-lock.json  package.json  script.js  server.js  styles.css
game_rust_sdk/web_ui/images/: README.md
(+1 files in other folders)
