[package]
name = "game_rust_sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for interacting with Ethereum game token contracts"
authors = ["GameRustSDK Team"]

[dependencies]
ethers = { version = "2.0.8", features = ["abigen", "legacy"] }
ethers-providers = "2.0.8"
ethers-core = "2.0.8"
ethers-contract = "2.0.8"
tokio = { version = "1.29.0", features = ["full"] }
anyhow = "1.0.72"
hex = "0.4.3"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
once_cell = "1.18.0"
thiserror = "1.0.44"
async-trait = "0.1.72"
dotenv = "0.15.0"
clap = { version = "4.3.19", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# API Dependencies
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tower = "0.4.13"
hyper = { version = "0.14.27", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] } 